--- a/src/algorithm/bitMask/비트마스크_연구.md
+++ b/src/algorithm/bitMask/비트마스크_연구.md
@@ -2,8 +2,8 @@
 - 정수의 이진수 표현법을 사용하여 집합 구현에 자주 쓰고 큰 속도 향상을 가져올 수 있음
   
   
-{1, 2, 3, 4, 5, 6, 7, 8, 9, 10}의 Set을 가정하자.  
-각 숫자가 Set에서 해당하는 자리에 있는지를 1 or 0으로 판단하여 총합을 구한 하나의 정수를 구해 사용한다.  
+> {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}의 Set을 가정하자.  
+> 각 숫자가 Set에서 해당하는 자리에 있는지를 1 or 0으로 판단하여 총합을 구한 하나의 정수를 구해 사용한다.  
   
   
 - 공집합 생성
@@ -11,9 +11,9 @@
 int A = 0;
 ```
   
-- 꽉 찬 집합 생성: {10, 9, 8, 7, 6, 5, 4, 3, 2, 1}
+- 꽉 찬 집합 생성: {10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0}
 ```
-A = (1 << 11) - 1;
+A = (1 << (10 + 1)) - 1;
 ```
   
 - 원소 k 추가: k의 자리까지 1을 왼쪽으로 밀어주고 1을 켜준다.
